# fullon_ticker_service

./: .coverage  .env  AGENTS.md  CLAUDE.md  CLAUDE_PROJECT_GUIDE.md  README.md  START_HERE.md  debug_daemon.py  env.example  git_issues_rules.md  git_plan.md  pyproject.toml  test_admin_exchanges.py  validate_imports.py
docs/: 11_FULLON_EXCHANGE_LLM_README.md  ARCHITECTURE.md  EXAMPLES.md  FULLON_CACHE_LLM_QUICKSTART.md  FULLON_CACHE_METHOD_REFERENCE.md  FULLON_CREDENTIALS_LLM_README.md  FULLON_LOG_LLM_REAMDE.md  FULLON_ORM_LLM_METHOD_REFERENCE.md  FULLON_ORM_LLM_README.md  FULLON_TICKER_SERVICE_LLM_REFERENCE.md  POETRY_UPDATE.md  POETRY_UPDATE_ORDER.txt  simple_price_monitor.py  websocket_example.py
examples/: callback_override.py  daemon_control.py  daemon_stop.py  demo_data.py  install_demo_to_main_db.py  run_all_examples.py  run_example_pipeline.py  setup_persistent_test_db.py  single_ticker_loop_example.py  ticker_retrieval.py
legacy/: tick_manager.py
src/fullon_ticker_service/: __init__.py  daemon.py  exchange_adapter.py  exchange_handler.py  ticker_manager.py
src/fullon_ticker_service/ticker/: __init__.py  live_collector.py
tests/: conftest.py  conftest_isolated.py
tests/factories/: __init__.py  exchange_factory.py  symbol_factory.py  tick_factory.py
tests/integration/: test_run_all_examples.py  test_run_example_pipeline.py
tests/unit/: test_baseline.py  test_cache_consistency_fix.py  test_daemon.py  test_daemon_issue_1.py  test_demo_data.py  test_exchange_adapter.py  test_exchange_handler.py  test_exchange_handler_comprehensive.py  test_isolation_debug.py  test_live_ticker_collector.py  test_orm_compatibility.py  test_rollback_debug.py  test_symbol_refresh.py  test_ticker_manager.py  test_transaction_debug.py  test_with_isolated_db.py
