[project]
name = "fullon-ticker-service"
version = "0.1.6"
description = "Async daemon service for real-time cryptocurrency ticker data collection using websockets"
authors = [
    {name = "Ingmar Frey", email = "ingmar.frey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "asyncio-mqtt>=0.16.0",
    "aioredis>=2.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "uvloop>=0.19.0",
    "python-dotenv>=1.0.0",
    "fullon-log @ git+ssh://git@github.com/ingmarAvocado/fullon_log.git@main",
    "fullon-orm @ git+ssh://git@github.com/ingmarAvocado/fullon_orm.git@main",
    "fullon-cache @ git+ssh://git@github.com/ingmarAvocado/fullon_cache.git@main",
    "fullon-exchange @ git+ssh://git@github.com/ingmarAvocado/fullon_exchange.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-xdist>=3.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "aioresponses>=0.7.4",
]

# [project.scripts]
# fullon-ticker = "fullon_ticker_service.cli:main"  # TODO: Implement in Issue #13

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/fullon_ticker_service",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=70",
    "-v",  # Verbose output showing each test
    "-ra",
    "--tb=short"
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
    "websocket: marks tests that use websocket connections",
]
filterwarnings = [
    "ignore::DeprecationWarning:uvloop.*",
    "ignore:uvloop.install.*:DeprecationWarning",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/cli.py",
    "*/demo_install.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false  # Always show all files in coverage table
fail_under = 70
precision = 2  # Show coverage percentages with 2 decimal places

[tool.black]
line-length = 100
target-version = ["py313"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "I001"]  # Allow assert and flexible imports in tests

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "uvloop.*",
]
ignore_missing_imports = true
